--- a/memory-threads-app/app/dashboard/page.module.css
+++ b/memory-threads-app/app/dashboard/page.module.css
@@ -13,6 +13,17 @@
   height: 50px;
   width: 85%;
   justify-content: space-evenly;
+  align-items: center;
+}
+
+.header > p {
+  font-size: 30px;
+  /* font-weight: bold; */
+  color: #2a1a00;
+
+  /* font-weight: 300; */
+  color: #5c3d30;
+  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3);
 }
 
 .displayMemories {
@@ -25,4 +36,28 @@
 .displayMemories > div {
   border: 1px black solid;
   margin-top: 20px;
+}
+
+.createMemoryBtn {
+  cursor: pointer;
+  border-radius: 4px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  margin: 0 10px;
+  width: auto;
+  transition: 0.4s;
+  height: 40px;
+  color: #2a1a00;
+  background-color: rgba(0, 0, 0, 0);
+  border: 2px solid #5c3d30;
+
+  color: #5c3d30;
+  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3);
+}
+
+.createMemoryBtn:hover {
+  transform: scale(1.02);
+  background-color: #f3f1ed;
+  color: #866051;
+  border: 0;
 }
