--- a/memory-threads-app/app/dashboard/page.module.css
+++ b/memory-threads-app/app/dashboard/page.module.css
@@ -18,8 +18,6 @@
 
 .header > p {
   font-size: 30px;
-  /* font-weight: bold; */
-  color: #2a1a00;
 
   /* font-weight: 300; */
   color: #5c3d30;
@@ -29,35 +27,25 @@
 .displayMemories {
   display: flex;
   align-items: center;
-  width: 85%;
+  width: 80%;
   flex-direction: column;
-}
-
-.displayMemories > div {
-  border: 1px black solid;
-  margin-top: 20px;
 }
 
 .createMemoryBtn {
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 8px; /* More rounded corners */
   font-family: "Inter", sans-serif;
-  font-weight: 600;
+  font-weight: 600; /* Bolder text */
   margin: 0 10px;
-  width: auto;
-  transition: 0.4s;
-  height: 40px;
-  color: #2a1a00;
-  background-color: rgba(0, 0, 0, 0);
-  border: 2px solid #5c3d30;
-
-  color: #5c3d30;
-  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3);
+  padding: 12px 20px; /* Adjust padding */
+  transition: all 0.3s ease; /* Smoother transition */
+  height: auto;
+  border: 0;
+  color: #fff; /* Brighter text color for contrast */
+  background-color: #be7dff; /* Softer background color */
 }
 
 .createMemoryBtn:hover {
-  transform: scale(1.02);
-  background-color: #f3f1ed;
-  color: #866051;
-  border: 0;
+  transform: translateY(-1px); /* Slight upward movement */
+  transform: scale(1.03);
 }
