--- a/memory-threads-app/components/MainNavbar.module.css
+++ b/memory-threads-app/components/MainNavbar.module.css
@@ -6,8 +6,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
-  margin: 15px;
+  width: 98%;
+  margin-bottom: 20px;
+  padding-top: 15px;
+  margin-top: 0px;
+  margin-left: 0px;
 }
 
 .header p {
@@ -35,13 +38,17 @@
   border-radius: 4px;
   font-family: "Inter", sans-serif;
   font-weight: 600;
-  margin: 0 10px;
+  margin: 0px 10px;
   width: auto;
   transition: 0.4s;
   height: 40px;
   width: 120px;
 }
 
+/* add margin in second button */
+.nav button:nth-child(2) {
+  margin-right: 50px;
+}
 .loginBtn {
   color: white;
   background-color: rgba(0, 0, 0, 0);
@@ -65,4 +72,12 @@
   transform: scale(1.02);
   /* background-color: #f79489; */
   /* color: white; */
+}
+
+.userButton {
+  margin-right: 10px;
+}
+
+.loggedInColor {
+  background-color: rgba(255, 119, 95, 0.777);
 }
