--- a/memory-threads-app/components/MainNavbar.module.css
+++ b/memory-threads-app/components/MainNavbar.module.css
@@ -1,7 +1,7 @@
 .header {
   background-color: rgba(0, 0, 0, 0);
   padding: 15px;
-  z-index: 1000;
+  z-index: 1;
   position: absolute;
   display: flex;
   justify-content: space-between;
@@ -79,5 +79,5 @@
 }
 
 .loggedInColor {
-  background-color: rgba(255, 119, 95, 0.777);
+  background-color: rgb(255, 171, 156);
 }
