--- a/memory-threads-app/components/MemoryComponent.module.css
+++ b/memory-threads-app/components/MemoryComponent.module.css
@@ -19,8 +19,18 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px; /* Add space between header and content */
+  margin-top: 5px;
 }
 
+.heading p {
+  font-size: 18px;
+  margin: 0;
+  color: #2a1a00;
+}
+
+.buttons {
+  display: flex;
+}
 .buttons > button {
   margin-left: 20px;
   padding: 10px 20px; /* More padding for better button size */
@@ -32,4 +42,29 @@
 
 .buttons > button:hover {
   background-color: gray; /* Slight background color change on hover */
+}
+
+.content {
+  margin-top: 20px;
+  margin-bottom: 25px;
+  line-height: 25px;
+}
+
+.specialLinkDiv {
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+.specialLinkDiv > a {
+  border: 1px solid #be7dff;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+  color: #be7dff;
+}
+
+.specialLinkDiv > a:hover {
+  background-color: #be7dff;
+  color: #fff;
 }
